# facebook-ad-library-scraper

./: .gitignore  README.md  example.py  pyproject.toml  scrapper.py  test.py
.github/workflows/: publish.yml
facebook_ad_library_scraper/: __init__.py  cli.py  core.py
